@@ -1,6 +1,8 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.sugarandsaltsolutions.micro.model.dynamics;
 
+import java.util.ArrayList;
+
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.common.phetcommon.util.Pair;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.Particle;
@@ -13,8 +15,8 @@ import static edu.colorado.phet.sugarandsaltsolutions.micro.model.dynamics.Updat
  *
  * @author Sam Reid
  */
-public class ParticlePair extends Pair<Particle, Particle> {
-    public ParticlePair( Particle a, Particle b ) {
+public class FormulaUnit<T extends Particle> extends Pair<T, T> implements IFormulaUnit {
+    public FormulaUnit( T a, T b ) {
         super( a, b );
     }
 
@@ -31,5 +33,12 @@ public class ParticlePair extends Pair<Particle, Particle> {
         _2.velocity.set( velocity.times( -1 ) );
         _1.stepInTime( ZERO, dt );
         _2.stepInTime( ZERO, dt );
+    }
+
+    public ArrayList<Particle> getParticles() {
+        return new ArrayList<Particle>() {{
+            add( _1 );
+            add( _2 );
+        }};
     }
 }
