@@ -8,9 +8,10 @@ import edu.colorado.phet.sugarandsaltsolutions.micro.model.ItemList;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.MicroModel;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.Particle;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle.Sodium;
+import edu.colorado.phet.sugarandsaltsolutions.micro.model.dynamics.AllPairs;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.dynamics.CrystalGrowth;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.dynamics.CrystalStrategy;
-import edu.colorado.phet.sugarandsaltsolutions.micro.model.dynamics.ParticlePair;
+import edu.colorado.phet.sugarandsaltsolutions.micro.model.dynamics.IFormulaUnit;
 
 import static edu.colorado.phet.sugarandsaltsolutions.micro.model.RandomUtil.randomAngle;
 
@@ -24,8 +25,8 @@ public class SodiumNitrateCrystalGrowth extends CrystalGrowth<Particle, SodiumNi
         super( model, crystals );
     }
 
-    @Override protected ArrayList<ParticlePair> getAllPairs() {
-        return generateAllPairs( Sodium.class, Nitrate.class );
+    @Override protected ArrayList<IFormulaUnit> getAllSeeds() {
+        return new AllPairs( model.freeParticles, Sodium.class, Nitrate.class );
     }
 
     @Override protected SodiumNitrateCrystal newCrystal( ImmutableVector2D position ) {
